# E4A

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ONBOARDING.md  README.md  ROADMAP.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  repomix-output.xml  requirements.txt  setup.cfg  setup.sh
.github/workflows/: ci.yml  publish.yml  release.yml  semantic-release.yml  validator.yml
adapters/a2a/: adapter.py
adapters/ap2/: ap2_client.py  ap2_mock_server.py
adapters/universal_rail_adapter/: cardano_midnight_bridge.py  eth_adapter.py  midnight_adapter.py  mock_server.py
api/: server.py
cli/: cli_main.py  e4a_cli.py
core/: scribe_agent.py
data/: ap2_mock_store.json  chain_anchors.json  governance_state.json  midnight_store.json  mission_log.jsonl  reputation_store.json
docs/: E4A_Level2.1_Validated.md  ECOSYSTEM.md  PUBLISHING.md  THREAT_MODEL_V2.md  attestation_chain_model.md  charter_manifest.md  philosophy.md  quickstart.md  security.md
e4a.egg-info/: PKG-INFO  SOURCES.txt
e4a_sdk/: __init__.py
plans/: E4A_v1.1.yml
scripts/scripts/: build_publish_py.sh
sdk/python/data/: governance_state.json
sdk/python/e4a_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
specs/: attestation_v1.json  gate_v1.json  mandate_v1.json  mandate_v2.json  mission_log_v1.md  wisdom_artifact_v1.json
tests/: test_api_cli_integration.py  test_cardano_midnight_bridge.py  test_cli_sdk.py  test_gate_engine.py  test_integration_ap2_midnight.py  test_mandate_engine.py
tools/: mission_log_canonicalizer.py  validator.py
(+8 files in other folders)
